Fixed homepage text align

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -101,9 +101,6 @@ body {
             }
           }
 
-          .story-overview-preview {
-            text-align: center;
-          }
         }
       }
     }
